Fixed Overflow and Added Twitter Link 🦅

--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -11,7 +11,7 @@ body {
   background-color: #39afea;
   color: #f4f8fb;
   height: 100vh;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   overflow-x: hidden;
 }
 body::-webkit-scrollbar {
@@ -33,7 +33,18 @@ ul {
 .loader {
   text-align: center;
 }
-
+.loader img {
+  width: 50%;
+}
+.loadingState {
+  font-size: 3rem;
+  width: fit-content;
+  margin: 0 auto;
+  text-align: center;
+  font-weight: bolder;
+  background-color: #5b40e2;
+  padding: 0.2em;
+}
 .cloud {
   width: 100%;
   animation: 2s move alternate-reverse infinite linear;
@@ -74,5 +85,8 @@ ul {
   nav .cloud {
     display: none;
     animation: none;
+  }
+  .loader img {
+    width: 80%;
   }
 }
